Added global matrix calculation and new cmake presets.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,23 @@ cmake_minimum_required(VERSION 4.0)
 
 project(MeshSolve C CXX Fortran)
 
-find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
 find_package(OpenBLAS REQUIRED)
 
-add_executable(meshsolve ${SRC_DIR}/meshsolve.c)
+if(COMPILE_TO_DLL)
+    add_library(meshsolve SHARED)
+    set_target_properties(meshsolve PROPERTIES PREFIX "")
+
+    target_sources(meshsolve 
+        PRIVATE ${SRC_DIR}/meshsolve.c
+        PUBLIC ${SRC_DIR}/meshsolve.h
+    )
+    message(STATUS "Compiling code to DLL library.")
+else()
+    add_executable(meshsolve ${SRC_DIR}/meshsolve.c)
+    message(STATUS "Compiling code to executable.")
+endif()
 
 target_link_libraries(meshsolve
-    PRIVATE OpenBLAS::OpenBLAS Python3::Python)
+    PRIVATE OpenBLAS::OpenBLAS
+    )
     
